@@ -2,10 +2,11 @@
 .yardoc
 dist/
 pkg/
-spec/fixtures/
+spec/fixtures/*
+!spec/fixtures/hieradata/
+!spec/fixtures/hieradata/*
+spec/fixtures/hieradata/hiera.yaml
 spec/rp_env/
-!/spec/hieradata/default.yaml
-!/spec/fixtures/site.pp
 .rspec_system
 .vagrant/
 .bundle/
@@ -14,3 +15,4 @@ vendor/
 junit/
 log/
 doc/
+.idea/
